--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.19.2",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "eslint": "^8.56.0",
     "nuxt": "^3.8.2",
     "sass": "^1.69.5",
     "typescript": "*",
     "vue": "^3.3.12",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@nuxt/image": "^1.1.0",
+    "normalize.css": "^8.0.1",
+    "v-wave": "^2.0.0"
   }
 }
