--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@sidebase/nuxt-auth": "^0.6.3",
     "eslint": "^8.56.0",
     "nuxt": "^3.8.2",
     "sass": "^1.69.5",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.1.0",
+    "mongoose": "^8.0.3",
     "normalize.css": "^8.0.1",
     "v-wave": "^2.0.0"
   }
