--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@sidebase/nuxt-auth": "^0.6.3",
+    "@types/jsonwebtoken": "^9.0.5",
     "eslint": "^8.56.0",
     "nuxt": "^3.8.2",
     "sass": "^1.69.5",
@@ -22,8 +22,13 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.1.0",
+    "@pinia/nuxt": "^0.5.1",
+    "js-sha512": "^0.8.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "normalize.css": "^8.0.1",
+    "nuxt-snackbar": "^1.0.4",
+    "pinia": "^2.1.7",
     "v-wave": "^2.0.0"
   }
 }
